tests/invalid/UnionType_Invalid_18.whiley
type named is null | &int

method f(named f) -> int:
    return *f